@@ -15,6 +15,7 @@ public class DeadSwap {
     private final List<Player> players = new ArrayList<>(Bukkit.getOnlinePlayers());
     private final int min_players = 2;
     private final Map<Player, Integer> playerAirLevels = new HashMap<>();
+    private BukkitRunnable task;
 
     public DeadSwap(Player player, Main main) {
         this.plugin = main;
@@ -31,37 +32,37 @@ public class DeadSwap {
             readyPlayer(p);
         }
 
-        prepareForSwap(player);
+        prepareForSwap();
     }
 
     private void readyPlayer(Player player) {
         player.sendMessage("Un nouveau DeadSwap va commencer, soyez prêts !");
         player.setGameMode(GameMode.SURVIVAL);
-        player.setHealth(player.getMaxHealth());
+        player.setHealth(20);
         player.setFoodLevel(20);
         player.setSaturation(10);
     }
 
-    private void prepareForSwap(Player player) {
+    private void prepareForSwap() {
         new BukkitRunnable() {
             @Override
             public void run() {
-                startSwapTask(player);
+                startSwapTask();
             }
         }.runTaskLater(plugin, 60 * 20L); // 1 minute en ticks (20 ticks = 1 seconde)
     }
 
-    private void startSwapTask(Player player) {
-        BukkitRunnable task = new BukkitRunnable() {
+    private void startSwapTask() {
+        task = new BukkitRunnable() {
             @Override
             public void run() {
-                startCountdown(player, this);
+                startCountdown();
             }
         };
         task.runTaskTimer(plugin, 0L, 2 * 60 * 20L); // 2 minutes en ticks (20 ticks = 1 seconde)
     }
 
-    private void startCountdown(Player player, BukkitRunnable task) {
+    private void startCountdown() {
         new BukkitRunnable() {
             int countdown = 5;
 
@@ -72,15 +73,14 @@ public class DeadSwap {
                     countdown--;
                 } else {
                     this.cancel();
-                    swapPlayers(player, task);
+                    swapPlayers();
                 }
             }
         }.runTaskTimer(plugin, 0L, 20L); // 20 ticks = 1 seconde
     }
 
-    private void swapPlayers(Player player, BukkitRunnable task) {
+    private void swapPlayers() {
         if (players.size() < min_players) {
-            player.sendMessage("Désolé, tu es tout seul.");
             Bukkit.broadcastMessage("La partie est annulée, il n'y a pas assez de joueurs.");
             task.cancel();
             return;
@@ -123,11 +123,24 @@ public class DeadSwap {
         players.remove(player);
 
         if (players.size() == 1) {
-            Player winner = players.get(0);
-            Bukkit.broadcastMessage("Félicitation à " + winner.getName() + " qui a gagné la partie de DeadSwap !");
-            plugin.onGame = false;
-            main.expChange = true;
-            winner.giveExpLevels(1);
+            win(main);
+        }
+    }
+    private void win(Main main){
+        Player winner = players.getFirst();
+        Bukkit.broadcastMessage("Félicitation à " + winner.getName() + " qui a gagné la partie de DeadSwap !");
+        plugin.onGame = false;
+        main.expChange = true;
+        winner.giveExpLevels(1);
+        task.cancel();
+    }
+
+    public void checkReady(Main main) {
+        Bukkit.broadcastMessage(main.ready_players.size() + " est prêt sur : " + players);
+        if(players.size() == main.ready_players.size()){
+            task.cancel();
+            startSwapTask();
+            swapPlayers();
         }
     }
 }
